# sound0matic

./: CMakeLists.txt  README.md
Source/: BufferAudioFormatReader.cpp  BufferAudioFormatReader.h  CMakeLists.txt  FFTProcessor.cpp  FFTProcessor.h  Morphology.cpp  Morphology.h  PhaseFX.cpp  PhaseFX.h  PhaseVocoder.cpp  PhaseVocoder.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PostFX.cpp  PostFX.h  STNModule.cpp  STNModule.h  SampleLoader.cpp  SampleLoader.h  SpectralFX.cpp  SpectralFX.h
documentation/: MVP_SPEC.md  README.dev.md  TODO.md  TechnicalDesignDocument.md  clang-format.md  s0m_blueprint.md  sound0matic-TDD-WIP.txt  sound0matic_mk1-blueprint.txt
